Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36298

Geoclue positioning plugin does not report direction of travel

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.0
    • 5.2.0
    • Positioning
    • None
    • Linux
    • be48e390962413258d9c310fbf226759c1229f78

    Description

      The direction information is available from Geoclue, however, the Geoclue positioning plugin ignores it. The Geoclue positioning plugin should report all values supported by both Geoclue API and QGeoPositionInfo.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            amccarthy Aaron McCarthy
            amccarthy Aaron McCarthy
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes