Report direction and vertical speed with Geoclue plugin.

Geoclude provides both direction and vertical speed information with
the velocity interface. These values were previously being ignored.

[ChangeLog][QtPositioning][Geoclue] The Geoclue plugin now reports
direction of travel and vertical speed attributes, if supported by the
active Geoclue provider.

Task-number: QTBUG-36298
Change-Id: I9f99a64f3c2bd78a06a6c60e0ef3af6f75223e9f
Reviewed-by: Alex Blasche <alexander.blasche@digia.com>